moved time, duration and size specifications from inside blocks to inside communities in datastructure.

--- a/Visualisation/index.html
+++ b/Visualisation/index.html
@@ -15,17 +15,11 @@
   </head>
   <body>
 
-<!-- <div style="width: 100%; overflow: hidden;">
-    <div id="w1" style="width: 66%; float: left;"></div>
-    <div id="w2" style="position: fixed;"></div>
-</div> -->
-
 <div style="width: 100%; overflow: hidden;">
     <div id='w1'></div>
     <div id='w2'></div>
 
     <div id='w4'>
-      <div>
 
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
@@ -38,11 +32,11 @@
           <div role="tabpanel" class="tab-pane active" id="home">
             <br>
             <p class='sidebar-text'>
-            This is an attempt to visualise how people flow through social communities throughout a day. On the left you see how social gatherings stretch out over a day and above is a network showing social connections in the narrow time span, which is illustrated as a blue band, initiated around 9 AM.
+            This visualization shows how university students flow through social communities throughout a day. On the left you see how meetups stretch out over time and above is a network showing social connections in the narrow time span illustrated as a blue band on the left, initiated around 9 AM.
 
             <br><br>
 
-            The data used in this visualisation consists of physical meetings throughout a day, recorded by bluetooth connections between phones carried by the little 500+ participants. Each meeting is represented as a link in the network above, and each circle represents a person. The social communities are inferred using <a href="http://mapequation.org/">the Map Equation</a>.
+            The data used in this visualisation consists of physical meetings throughout a day, recorded as bluetooth connections between phones carried by the over 500+ participants. Each meeting is represented as a link in the network above, and each node represents a person. The social communities are inferred using <a href="http://mapequation.org/">the Map Equation</a>.
 
           </p>
 
@@ -53,7 +47,7 @@
           </div>
           <div role="tabpanel" class="tab-pane" id="profile">
             <br>
-            <p class='sidebar-texr'>Try hovering over a community on the left. Neat right? All the remaining communities are ones that have members in common with the one you are hovering over. Now click it! You can now move the curser around and hover over the visible communities to see just how similar they are to the one you clicked. Now try playing with the arrow keys. Note how the graph updates and that the horizontal time bar (initiated at 9 AM) moves. Pan or zoom on the graph to manipulate its location. Double click a community to focus on it as you shuffle through time. Hold shift as you go &uarr; or &darr; to slow down the animation. Click a time stamp to jump to a different place in time. Enjoy!</p>
+            <p class='sidebar-text'>Try hovering over a community on the left. Neat right? All the remaining communities are ones that have members in common with the one you are hovering over. Now click it! You can now move the curser around and hover over the visible communities to see just how similar they are to the one you clicked. Now try playing with the arrow keys. Note how the graph updates and that the horizontal time bar (initiated at 9 AM) moves. Pan or zoom on the graph to manipulate its location. Double click a community to focus on it as you shuffle through time. Hold shift as you go &uarr; or &darr; to slow down the animation. Click a time stamp to jump to a different place in time. Enjoy!</p>
 
             <table class="table table-striped"> 
               <thead> 
@@ -88,8 +82,6 @@
 
           </div>
         </div>
-
-      </div>
     </div>
 
     
