added slider which updates sausage view

--- a/Visualisation/index.html
+++ b/Visualisation/index.html
@@ -8,8 +8,10 @@
     <script type="text/javascript" src="libs/jquery.js"></script>
     <script type="text/javascript" src="libs/d3-tip.js"></script>
     <script type="text/javascript" src="libs/bootstrap/js/tab.js"></script>
+    <script type="text/javascript" src="libs/bootstrap/js/slider.js"></script>
     
     <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="libs/bootstrap/css/bootstrap-slider.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./viz.css">
 
   </head>
@@ -18,6 +20,9 @@
 <div style="width: 100%; overflow: hidden;">
     <div id='w1'></div>
     <div id='w2'></div>
+    <div id='w3'>
+      <input id="ex6" data-slider-id='ex6Slider' type="text" data-slider-min="1" data-slider-max="10" data-slider-step="1" data-slider-value="3"/>
+    </div>
 
     <div id='w4'>
 
