--- a/Visualisation/index.html
+++ b/Visualisation/index.html
@@ -9,6 +9,17 @@
     <script type="text/javascript" src="libs/d3-tip.js"></script>
     <script type="text/javascript" src="libs/bootstrap/js/tab.js"></script>
     <script type="text/javascript" src="libs/bootstrap/js/slider.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js'></script> 
+
+    <style>
+      @import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600);
+      body {
+        font-family: "Source Code Pro", Consolas, monaco, monospace;
+        font-size: 18px;
+        line-height: 1.5;
+        font-weight: 400;
+      }
+      </style>
     
     <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="libs/bootstrap/css/bootstrap-slider.css" rel="stylesheet">
