--- a/Visualisation/index.html
+++ b/Visualisation/index.html
@@ -76,22 +76,34 @@
           <div role="tabpanel" class="tab-pane active" id="home">
             <br>
             <p class='sidebar-text'>
-            This visualization shows how university students flow through social communities throughout a day. On the left you see how meetups stretch out over time and above is a network showing social connections in the narrow time span illustrated as a blue band on the left, initiated around 9 AM.
+            This visualization shows how university students flow through social communities throughout a day. On the left you see how meetups stretch out over time and above is a network showing social connections in the narrow time span illustrated as a blue ribbon on the left, initiated around 9 AM.
 
             <br><br>
 
             The data used in this visualisation consists of physical meetings throughout a day, recorded as bluetooth connections between phones carried by the over 500+ participants. Each meeting is represented as a link in the network above, and each node represents a person. The social communities are inferred using <a href="http://mapequation.org/">the Map Equation</a>.
 
+            <br><br>
+
+            This visualization is the result of a student research project conducted in collaboration with the  <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0095978">Copenhagen Networks Study</a>. The code is shared on <a href="https://github.com/ulfaslak/InfomapSensibleDTU">Github</a>.
           </p>
 
             <br>
 
-            <p align="right"> produced by <a href="http://ulfaslak.com/">Ulf Aslak</a>, &copy;2015.
+            <p align="right"> Produced by <a href="http://ulfaslak.com/">Ulf Aslak</a>, &copy;2015.
             </p>
           </div>
           <div role="tabpanel" class="tab-pane" id="profile">
             <br>
-            <p class='sidebar-text'>Try hovering over a community on the left. Neat right? All the remaining communities are ones that have members in common with the one you are hovering over. Now click it! You can now move the curser around and hover over the visible communities to see just how similar they are to the one you clicked. Now try playing with the arrow keys. Note how the graph updates and that the horizontal time bar (initiated at 9 AM) moves. Pan or zoom on the graph to manipulate its location. Double click a community to focus on it as you shuffle through time. Hold shift as you go &uarr; or &darr; to slow down the animation. Click a time stamp to jump to a different place in time. Enjoy!</p>
+            <p class='sidebar-text'>Try hovering over a community-strip on the left. This removes all communities that have no members in common with the one you are hovering over. Now click it! This enables you to move the curser around and hover over the visible communities to see how similar they are to the one you clicked. 
+
+            <br><br>
+
+            Play around with the arrow keys. This is how you shuffle through time, with 5 minutes steps. Note how the graph updates and that the blue time ribbon (initiated at 9 AM) moves vertically. Pan or zoom on the graph to manipulate its location. Double click a node to focus on its community as you shuffle through time. Hold <kbd>shift</kbd> for slow motion. Click a time stamp to jump to a different place in time. 
+
+            <br><br>
+
+            The slider above controls the minimum allowed size for groups in the visualisation. If it is set to 5, groups whose maximum size is lower than this is not shown. Below that you can choose which day of the week to show in the visualisation.
+          </p>
 
             <table class="table table-striped"> 
               <thead> 
